# opengl-blue-marble

./: .editorconfig  .gitignore  CMakeLists.txt  Debug.ps1  README.md
cmake/: base.cmake  debug.cmake  os.cmake  release.cmake
cmake/base/: compilers.cmake  libs.cmake  link.cmake  optimizations.cmake  warnings.cmake
cmake/debug/: link.cmake
cmake/release/: link.cmake
env/: env.example.hh
env/debug/: env.example.hh
env/release/: env.example.hh
shaders/: triangule_frag.glsl  triangule_vert.glsl
src/: CMakeLists.txt  delta.cc  fly_camera.cc  fs.cc  info.cc  main.cc  scenes.cc  shaders.cc  textures.cc
src/headers/: delta.hh  directional_light.hh  errors.hh  fly_camera.hh  fs.hh  info.hh  os.hh  scenes.hh  shaders.hh  textures.hh  window.hh
src/scenes/: quad.cc  single_triangule.cc  single_triangule_1.cc  sphere.cc
